--- a/config-descriptor.yml
+++ b/config-descriptor.yml
@@ -1,7 +1,7 @@
 descriptor:
-  name: God Forge Control
-  description: Program for automating the production of Degenerate Quark Gluon Plasma and Molten Magmatter
-  repositoryLink: https://github.com/Navatusein/GTNH-OC-God-Forge-Control
+  name: Black Hole Control
+  description: Program for automating crafting in the Pseudostable Black Hole Containment Field
+  repositoryLink: https://github.com/Navatusein/GTNH-OC-Black-Hole-Control
   fieldGroups:
     - key: logger
       name: Logger
@@ -9,7 +9,7 @@ descriptor:
       fields:
         - key: name
           type: string
-          default: God Forge Control
+          default: Black Hole Control
           label: Name
           description: Name witch will be displayed in discord
 
@@ -26,55 +26,57 @@ descriptor:
           label: Discord Webhook Url
           description: Discord Webhook Url for notifications
 
-    - key: heliofusionExoticizerController
-      name: Heliofusion Exoticizer Controller
+    - key: blackHoleController
+      name: Black Hole Controller
       defaultOpen: true
       fields:
-        - key: magmatterMode
+        - key: blackHoleSeedsTransposerAddress
+          type: address
+          label: Black Hole Seeds Transposer Address
+          description: Address of the transposer which provide black hole seeds
+
+        - key: blackHoleSeedInputBusSide
+          type: side
+          default: sides.east
+          label: Black Hole Seed Input Bus Side
+          description: Side of the transposer which connected to seeds input bus
+
+        - key: ioPortTransposerAddress
+          type: address
+          label: IO Port Transposer Address
+          description: Address of the transposer which connected to ME Drive and ME IO Port
+
+        - key: meDriveSide
+          type: side
+          default: sides.east
+          label: ME Drive Side
+          description: Side of the transposer which connected to ME Drive
+
+        - key: meIoPortSide
+          type: side
+          default: sides.west
+          label: ME IO Port Side
+          description: Side of transposer which connected to ME IO Port
+
+        - key: meInterfaceAddress
+          type: address
+          label: ME Interface Address
+          description: Address of ME Interface
+
+        - key: saveRecipeMode
           type: boolean
           optional: true
           default: false
           class: checkbox
-          label: Enable Magmatter Mode
-          description: Enable mode of production magmatter
+          label: Save Mode
+          description: Recipe save mode
 
-        - key: outputMeInterfaceAddress
-          type: address
-          label: Output ME Interface Address
-          description: Address of me interface which connected to output AE
-
-        - key: inputMeInterfaceAddress
-          type: address
-          label: Input ME Interface Address
-          description: Address of me interface which connected to input AE
-
-        - key: transposerAddress
-          type: address
-          label: Transposer Address
-          description: Address of transposer
-
-        - key: meIoPortSide
-          type: side
-          default: sides.south
-          label: ME IO Port Side
-          description: Side of the transposer which connected to input AE ME IO Port
-
-        - key: meDriveSide
-          type: side
-          default: sides.north
-          label: ME Drive Side
-          description: Side of the transposer which connected to output AE ME Drive
-
-        - key: redstoneIoAddress
-          type: address
-          label: Redstone Address
-          description: Address of the Redstone I/O
-
-        - key: redstoneIoSide
-          type: side
-          default: sides.west
-          label: Redstone IO Side
-          description: Side of the redstone IO which connected to ME Level Emitter or other controller
+        - key: maxCyclesCount
+          type: integer
+          default: 0
+          min: 0
+          label: Max Cycles Count
+          description: Maximum number of cycles. For calculation use https://www.desmos.com/calculator/yrnt694v3h
 
   configTemplate: |
     local sides = require("sides")
@@ -84,7 +86,7 @@ descriptor:
     local fileLoggerHandler = require("lib.logger-handler.file-logger-handler-lib")
     local scrollListLoggerHandler = require("lib.logger-handler.scroll-list-logger-handler-lib")
 
-    local heliofusionExoticizerController = require("src.heliofusion-exoticizer-controller")
+    local blackHoleController = require("src.black-hole-controller")
 
     local config = {
       enableAutoUpdate = true, -- Enable auto update on start
@@ -110,16 +112,15 @@ descriptor:
         }
       }),
 
-
-      controller = heliofusionExoticizerController:newFormConfig({
-        magmatterMode = <field>magmatterMode</field>, -- Enable mode of production magmatter.
-        outputMeInterfaceAddress = "<field>outputMeInterfaceAddress</field>", -- Address of me interface which connected to output AE.
-        inputMeInterfaceAddress = "<field>inputMeInterfaceAddress</field>", -- Address of me interface which connected to input AE.
-        transposerAddress = "<field>transposerAddress</field>", -- Address of transposer.
-        meIoPortSide = <field>meIoPortSide</field>, -- Side of the transposer which connected to input AE ME IO Port.
-        meDriveSide = <field>meDriveSide</field>, -- Side of the transposer which connected to output AE ME Drive.
-        redstoneIoAddress = "<field>redstoneIoAddress</field>", -- Redstone IO Address.
-        redstoneIoSide = <field>redstoneIoSide</field> -- Side of the redstone IO which connected to ME Level Emitter or other controller.
+      controller = blackHoleController:newFormConfig({
+        blackHoleSeedsTransposerAddress = "<field>blackHoleSeedsTransposerAddress</field>", -- Address of the transposer which provide black hole seeds.
+        blackHoleSeedInputBusSide = <field>blackHoleSeedInputBusSide</field>, -- Side of the transposer which connected to seeds input bus.
+        ioPortTransposerAddress = "<field>ioPortTransposerAddress</field>", -- Address of the transposer which connected to ME Drive and ME IO Port.
+        meDriveSide = <field>meDriveSide</field>, -- Side of the transposer which connected to ME Drive.
+        meIoPortSide = <field>meIoPortSide</field>, -- Side of the transposer which connected to ME IO Port.
+        meInterfaceAddress = "<field>meInterfaceAddress</field>", -- Address of ME Interface.
+        saveRecipeMode = <field>saveRecipeMode</field>, -- Recipe save mode.
+        maxCyclesCount = <field>maxCyclesCount</field>, -- Maximum number of cycles. For calculation use: https://www.desmos.com/calculator/yrnt694v3h
       })
     }
 
