--- a/config-descriptor.yml
+++ b/config-descriptor.yml
@@ -66,7 +66,7 @@ descriptor:
         - key: saveRecipeMode
           type: boolean
           optional: true
-          default: false
+          default: true
           class: checkbox
           label: Save Mode
           description: Recipe save mode
